--- a/app1/templates/app1/crear_persona.html
+++ b/app1/templates/app1/crear_persona.html
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    La persona se creó con éxito
-</body>
-</html>
+{% extends 'app1/base.html' %}
+
+{%block title_pagina %}
+<title>Crear persona</title>
+{% endblock title_pagina %}
+
+{% block contenido %}
+<form action={% url 'Crear'%} method="POST">
+    {% csrf_token %}
+    <p>
+        <label for="nombre"></label>
+        <input type="text" name="nombre" placeholder="Ingrese nombre" autocomplete="off">
+    </p>
+    <p>
+        <label for="apellido"></label>
+        <input type="text" name="apellido" placeholder="Ingrese apellido" autocomplete="off">
+    </p>
+    <button>Crear</button>
+</form>
+{% endblock contenido %}
+
