--- a/app1/templates/app1/template.html
+++ b/app1/templates/app1/template.html
@@ -6,7 +6,8 @@
 
 {% block contenido %}
 
-<a class="navbar-brand" href={% url 'Inicio' %}>Inicio</a>
-
 <h2>Sobre nosotras</h2>
+<p>Hola! Somos Pao y Fabi. Nos conocemos hace 12 anios. Pao es Licenciada en Matematica y Fabi es Licenciada en Administracion. 
+Hace unos anios decidimos emprender juntas en el mundo de la programacion y datos, y aca nos animamos! Nos acompanian?
+</p>
 {% endblock contenido %}
