--- a/app1/templates/app1/index.html
+++ b/app1/templates/app1/index.html
@@ -12,7 +12,7 @@
             <div class="col-xl-6">
                 <div class="text-center text-white">
                     <!-- Page heading-->
-                    <h1 class="mb-5">Generate more leads with a professional landing page!</h1>
+                    <h1 class="mb-5">¡Bienvenidos a nuestra página!</h1>
                                             
                 </div>
             </div>
