--- a/app1/templates/app1/crear_mascota.html
+++ b/app1/templates/app1/crear_mascota.html
@@ -1,15 +1,16 @@
 {% extends 'app1/base.html' %}
 
 {%block title_pagina %}
-<title>Editar persona</title>
+<title>Crear mascota</title>
 {% endblock title_pagina %}
 
 {% block contenido %}
-<form action={% url 'editar_persona' persona.id%} method="POST">
+<form action={% url 'Crear'%} method="POST">
     {% csrf_token %}
     <table>
         {{formulario}}
     </table>
-    <button>Editar</button>
+    <button>Crear</button>
 </form>
 {% endblock contenido %}
+
