--- a/app1/templates/app1/editar_mascota.html
+++ b/app1/templates/app1/editar_mascota.html
@@ -1,16 +1,15 @@
 {% extends 'app1/base.html' %}
 
 {%block title_pagina %}
-<title>Crear persona</title>
+<title>Editar mascota</title>
 {% endblock title_pagina %}
 
 {% block contenido %}
-<form action={% url 'Crear'%} method="POST">
+<form action={% url 'editar_mascota' mascota.id%} method="POST">
     {% csrf_token %}
     <table>
         {{formulario}}
     </table>
-    <button>Crear</button>
+    <button>Editar</button>
 </form>
 {% endblock contenido %}
-
