--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -27,6 +27,14 @@
                 <a class="navbar-brand" href={% url 'Sobre nosotras' %}>Sobre nosotras</a>
                 <a class="navbar-brand" href={% url 'Crear' %}>Crear</a>
                 <a class="navbar-brand" href={% url 'Ver' %}>Ver</a>
+
+                {% if request.user.is_authenticated %} 
+                  <a class="navbar-brand" href={% url 'logout' %}>Cerrar sesion</a>
+               
+                {% else %}
+                   <a class="navbar-brand" href={% url 'login' %}>Iniciar sesion</a>
+                   
+                {% endif %}
             </div>
         </nav>
         <div class="container">
