--- a/app1/templates/app1/ver_mascota.html
+++ b/app1/templates/app1/ver_mascota.html
@@ -1,33 +1,30 @@
 {% extends 'app1/base.html' %}
 
 {%block title_pagina %}
-<title>Ver</title>
+<title>Ver mascota</title>
 {% endblock title_pagina %}
 
+
 {% block contenido %}
-<a class="navbar-brand" href={% url 'Crear' %}>Crear</a>
+<a class="navbar-brand" href={% url 'Crear' %}>Crear mascota</a>
 <p>Listado de mascotas: </p>
 
 <form action={% url 'Ver'%} method="GET">
-
     {{formulario}}
-
     <button>Buscar</button>
 </form>
 <p>
     {% if mascotas %}
 
         {% for mascota in mascotas%}
-
-        <li>
-        {{mascota}} 
-        {% comment %} <a class="navbar-brand" href={% url 'editar_mascota' mascota.id %}>Editar</a>
-        <a class="navbar-brand" href={% url 'eliminar_mascota' mascota.id %}>Eliminar</a> {% endcomment %}
-        <li>
-            
+            <li>
+                {{mascota}}
+                <a  href={% url 'Editar' mascota.id %}>Editar</a>
+                <a  href={% url 'Eliminar' mascota.id %}>Eliminar</a>
+            <li>
         {% endfor %}
 
-    {% else%}
+    {% else %}
     
         <p> No se encontraron resultados</p>
 
