--- a/app1/templates/app1/base.html
+++ b/app1/templates/app1/base.html
@@ -32,7 +32,7 @@
                   <a class="navbar-brand" href={% url 'logout' %}>Cerrar sesion</a>
                
                 {% else %}
-                   <a class="navbar-brand" href={% url 'login' %}>Iniciar sesion</a>
+                   {% comment %} <a class="navbar-brand" href={% url 'login' %}>Iniciar sesion</a> {% endcomment %}
                    
                 {% endif %}
             </div>
