--- a/app1/templates/app1/editar_mascota.html
+++ b/app1/templates/app1/editar_mascota.html
@@ -5,7 +5,7 @@
 {% endblock title_pagina %}
 
 {% block contenido %}
-<form action={% url 'editar_mascota' mascota.id%} method="POST">
+<form action={% url 'Editar' mascota.id%} method="POST">
     {% csrf_token %}
     <table>
         {{formulario}}
