media-accounts-descripcion

--- a/app1/templates/app1/crear_mascota_cbv.html
+++ b/app1/templates/app1/crear_mascota_cbv.html
@@ -8,6 +8,7 @@
 <form action={% url 'Crear'%} method="POST">
     {% csrf_token %}
     <table>
+        {{form.media}}
         {{form}}
     </table>
     <button>Crear</button>
