--- a/app1/templates/app1/editar_mascota_cbv.html
+++ b/app1/templates/app1/editar_mascota_cbv.html
@@ -8,6 +8,7 @@
 <form action={% url 'Editar' mascota.id%} method="POST">
     {% csrf_token %}
     <table>
+        {{form.media}}
         {{form}}
     </table>
     <button>Editar</button>
