--- a/app1/templates/app1/template.html
+++ b/app1/templates/app1/template.html
@@ -7,7 +7,10 @@
 {% block contenido %}
 
 <h2>Sobre nosotras</h2>
-<p>Hola! Somos Pao y Fabi. Nos conocemos hace 12 anios. Pao es Licenciada en Matematica y Fabi es Licenciada en Administracion. 
-Hace unos anios decidimos emprender juntas en el mundo de la programacion y datos, y aca nos animamos! Nos acompanian?
-</p>
+
+<p>
+    &#161;Hola! &#161;Bienvenidos! Somos Pao y Fabi, dos amigas que nos conocemos hace 12 a&#241;os. Pao es Licenciada en Matem&#225;tica y Fabi es Licenciada en Administraci&#243;n. 
+    Hace unos a&#241;os decidimos emprender juntas en el mundo de la programaci&#243;n, y nos animamos! Nuestro amor por los animales nos 
+    impuls&#243; a crear esta p&#225;gina, donde van a poder compartir animales en adopci&#243;n y entre todos encontrarles un hogar! &#191;Nos acompa&#241;an?
+</p><br>
 {% endblock contenido %}
